# TilapiaForReddit

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  README.md
blueprint/tilapia-for-reddit/: tilapia-for-reddit.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: CommentFetcher.cpp  CommentFetcher.hpp  CommentItem.cpp  CommentItem.hpp  CommentTreeModel.cpp  CommentTreeModel.hpp  lib.cpp  main.cpp  resources.qrc
source/android/: AndroidManifest.xml
source/contents/ui/: Comments.qml  CustomAbstractTreeItem.qml  CustomTreeViewDecoration.qml  HomePage.qml  Page.qml  main.qml
test/: CMakeLists.txt
